  * Add some extra info to mame-tools' short description.
  * Use secure URLs for Vcs-* fields, and point to cgit instead of gitweb.
  * Remove mame.menu and install/mame.xpm.
  * Update Standards-Version to 3.9.7, no changes needed.
  * Add qt5_build.patch: add -qt5 parametres to all calls of moc and qmake.
    Patch by Sune Vuorela, thanks!

 -- Jordi Mallach <jordi@debian.org>  Thu, 10 Mar 2016 23:38:43 +0100

mame (0.164-1) unstable; urgency=medium

  * New upstream release
  * Accomodate to massive upstream make process refactoring:
    - debian/patches:
      + Dropped gnu-fixes patch
    - debian/rules: Reworked makefile variables overrides
  * After upstream merge of MESS into MAME:
    - removed mess package
    - renamed mess-data package to mame-data

 -- Cesare Falco <c.falco@ubuntu.com>  Thu, 28 May 2015 05:49:01 +0200

mame (0.160-1) unstable; urgency=medium

  * New upstream release
  * debian/patches:
    - removed man pages updates, contributed upstream
    - updated gnu-fixes to new source layout

 -- Cesare Falco <c.falco@ubuntu.com>  Fri, 27 Mar 2015 16:03:45 +0100

mame (0.159-1) unstable; urgency=medium

  * New upstream release
  * debian/patches:
    - removed tools linkage fix
    - added man pages updates

 -- Cesare Falco <c.falco@ubuntu.com>  Fri, 27 Feb 2015 08:29:26 +0100

mame (0.158-1) unstable; urgency=medium

  * New upstream release
  * Fix permissions in mess-data resource files
  * debian/patches: fix tools linkage against system libraries

 -- Cesare Falco <c.falco@ubuntu.com>  Thu, 05 Feb 2015 09:31:58 +0100

mame (0.157-1) unstable; urgency=medium

  * New upstream release
  * debian/patches: removed manpages updates, contributed upstream

 -- Cesare Falco <c.falco@ubuntu.com>  Fri, 02 Jan 2015 16:53:49 +0100

mame (0.156-1) unstable; urgency=medium

  * New upstream release
  * Updated man pages patch
  * Switch to SDL 2.0 on upstream recommendation
  * Improved mame.ini consistency by simlinking